# mmfetcas_bot

./: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: bot.py  db.py  yandex_music_client.py
app/handlers/: __init__.py  add_playlist.py  delete_playlist.py  help.py  show_playlists.py  start.py
app/models/: __init__.py  base.py  playlist.py  song.py
app/services/: delete_functions.py  insert_functions.py  select_functions.py  yandex_music_API.py
